--- a/index.html
+++ b/index.html
@@ -340,22 +340,22 @@ Zoe
   <section id="photos" class="photo-page">
     <h2 class="photo-title">EDI WOW PO</h2>
     <div class="photo-grid">
-      <figure class="photo-card tilt-l">
+      <figure class="photo-card tilt-l" style="--no-heart:1;">
         <img src="pics/cutie1.jpg" alt="Beautiful Memory 1">
       </figure>
-      <figure class="photo-card tilt-r">
+      <figure class="photo-card tilt-r" style="--no-heart:1;">
         <img src="pics/cutie2.jpg" alt="Beautiful Memory 2">
       </figure>
-      <figure class="photo-card tilt-l">
+      <figure class="photo-card tilt-l" style="--no-heart:1;">
         <img src="pics/cutie3.jpg" alt="Beautiful Memory 3">
       </figure>
-      <figure class="photo-card tilt-r">
+      <figure class="photo-card tilt-r" style="--no-heart:1;">
         <img src="pics/cutie4.jpg" alt="Beautiful Memory 4">
       </figure>
-      <figure class="photo-card tilt-l">
+      <figure class="photo-card tilt-l" style="--no-heart:1;">
         <img src="pics/cutie5.jpg" alt="Beautiful Memory 5">
       </figure>
-      <figure class="photo-card tilt-r">
+      <figure class="photo-card tilt-r" style="--no-heart:1;">
         <img src="pics/cutie6.jpg" alt="Beautiful Memory 6">
       </figure>
     </div>
